--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,23 @@
 services:
-#  thematic_analysis_backend:
-#    platform: linux/amd64
-#    container_name: thematic_analysis_backend
-#    build:
-#      dockerfile: Dockerfile
-#    environment:
-#      - PYTHONUNBUFFERED=1
-#      - TZ=Europe/Moscow
-#    restart: always
-#
-#  thematic_analysis_nginx:
+  bet_maker_backend:
+    platform: linux/amd64
+    container_name: bet_maker_backend
+    build:
+      dockerfile: Dockerfile
+    environment:
+      - PYTHONUNBUFFERED=1
+      - TZ=Europe/Moscow
+    restart: always
+    networks:
+      - bet_maker_network
+    depends_on:
+      bet_maker_db:
+        condition: service_healthy
+    command: ./entrypoint.sh
+    ports:
+      - 8000:8000
+  #
+  #  thematic_analysis_nginx:
 #    image: nginx:1.25.2-alpine
 #    container_name: thematic_analysis_nginx
 #    volumes:
@@ -23,18 +31,26 @@ services:
     shm_size: 256m
     platform: linux/amd64
     container_name: bet_maker_db
+    networks:
+      - bet_maker_network
     environment:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_DB=${DB_NAME}
     ports:
-      - 5432:5432
+      - 5432
     volumes:
 #      - ${DB_PATH}:/var/lib/postgresql/data
       - ${BACKEND}/init_db_scripts/00_init.sh://docker-entrypoint-initdb.d/00_init.sh
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: always
+
+networks:
+  bet_maker_network:
+    driver: bridge
+    ipam:
+      driver: default
