--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-alembic==1.7.7
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==3.7.1
 asgiref==3.7.2
+asyncpg==0.29.0
 attrs==23.2.0
+black==24.3.0
 certifi==2024.2.2
 click==8.1.7
 fastapi==0.103.2
@@ -15,14 +17,18 @@ idna==3.4
 iniconfig==2.0.0
 Mako==1.3.2
 MarkupSafe==2.1.5
+mypy-extensions==1.0.0
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
 pluggy==1.4.0
 psycopg2==2.9.3
 py==1.11.0
 pydantic==2.4.2
 pydantic-settings==2.2.1
 pydantic_core==2.10.1
-pytest==7.1.1
+pytest==8.1.1
+pytest-asyncio==0.23.6
 python-dotenv==1.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.13
